--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>To Do List</title>
-  </head>
+</head>
 
-  <body>
-    <h1><%= kindOfDay %></h1>
-    <ul>
-      <li>hot food</li>
-      <li>eat food</li>
-      <li>buy food</li>
-      <li>get food</li>
+<body>
+    <div class="box" id="heading">
+        <h1>
+            <%= kindOfDay %>
+        </h1>
+    </div>
 
-      <% for (var i = 0; i < newListItems.length; i++) { %>
-      <li><%= newListItems[i] %></li>
-      <% } %>
-    </ul>
+    <div class="box">
+        <% for (var i=0; i < newListItems.length; i++) { %>
 
-    <form action="/" method="post">
-      <input type="text" name="newItem" />
-      <button type="submit" name="button">Add</button>
-    </form>
-  </body>
+            <div class="item">
+                <input type="checkbox" />
+                <p>
+                    <%= newListItems[i] %>
+                </p>
+            </div>
+
+            <% } %>
+                <form class="item" action="/" method="post">
+                    <input type="text" name="newItem" placeholder="Add New Item" autocomplete="off"/>
+                    <button type="submit" name="button">+</button>
+                </form>
+    </div>
+</body>
+
 </html>
