--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,24 +10,25 @@
         <!-- forEach loop to iterate through it new added item in the DB  -->
         <% newListItems.forEach(function(newListItem){ %>
 
-                <!-- form to run a post request to the /delete route  -->
-            <form action="/delete"  method = "post">
+            <!-- form to run a post request to the /delete route  -->
+            <form action="/delete" method="post">
 
                 <div class="item">
                     <!-- checkBox attributes updated to have a value of the item's id, name and submission trigger onChange  -->
-                    <input type="checkbox" value="<%= newListItem._id %>" name="checkBox" onChange="this.form.submit()"/>
-                    
-                     <!-- add each new List item's name -->
+                    <input type="checkbox" value="<%= newListItem._id %>" name="checkBox"
+                        onChange="this.form.submit()" />
+
+                    <!-- add each new List item's name -->
                     <p>
                         <%= newListItem.name %>
                     </p>
                 </div>
-
+                <input type="hidden" name="listName" value="<%= ListTitle %>"></input>
             </form>
             <% }); %>
 
 
-            <!-- submit text using post request -->
+                <!-- submit text using post request -->
                 <form class="item" action="/" method="post">
                     <input type="text" name="newItem" placeholder="Add New Item" autocomplete="off" />
                     <button type="submit" name="list" value="<%= ListTitle %>">+</button>
