--- a/views/list.ejs
+++ b/views/list.ejs
@@ -15,7 +15,7 @@
 
                 <div class="item">
                     <!-- checkBox attributes updated to have a value of the item's id, name and submission trigger onChange  -->
-                    <input type="checkbox" value="<%= newListItem._id %>" name="checkBox"
+                    <input type="checkbox" value="<%= newListItem._id %>" name="checkbox"
                         onChange="this.form.submit()" />
 
                     <!-- add each new List item's name -->
